--- a/styles/all-menu.module.css
+++ b/styles/all-menu.module.css
@@ -41,7 +41,7 @@
   flex-wrap: wrap;
 }
 .body .barrel .menuSection .menuItem {
-  border: 5px solid black;
+  border: 3px solid black;
   box-sizing: content-box;
   border-radius: 5px;
   width: calc(33% - 4rem);
@@ -59,7 +59,7 @@
   width: 100%;
   height: 60px;
   font-size: 18px;
-  padding: 0.3rem;
+  padding: 0.5rem;
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -137,7 +137,7 @@
   flex-wrap: wrap;
 }
 .body .bottle .menuSection .menuItem {
-  border: 5px solid black;
+  border: 3px solid black;
   box-sizing: content-box;
   border-radius: 5px;
   width: calc(33% - 4rem);
@@ -153,9 +153,9 @@
 }
 .body .bottle .menuSection .menuItem .aboutBox .title {
   width: 100%;
-  height: 70px;
+  height: 60px;
   font-size: 18px;
-  padding: 0.3rem;
+  padding: 0.5rem;
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -171,15 +171,13 @@
   align-items: center;
 }
 .body .bottle .menuSection .menuItem .aboutBox .product {
-  width: 100%;
-  height: 75px;
+  height: 110px;
   font-size: 15px;
   margin: 0;
   padding: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
 }
 .body .bottle .menuSection .menuItem .imageBox {
   grid-area: image;
@@ -235,7 +233,7 @@
   flex-wrap: wrap;
 }
 .body .cocktail .menuSection .menuItem {
-  border: 5px solid black;
+  border: 3px solid black;
   box-sizing: content-box;
   border-radius: 5px;
   width: calc(33% - 4rem);
@@ -251,9 +249,9 @@
 }
 .body .cocktail .menuSection .menuItem .aboutBox .title {
   width: 100%;
-  height: 70px;
+  height: 60px;
   font-size: 18px;
-  padding: 0.3rem;
+  padding: 0.5rem;
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -269,15 +267,13 @@
   align-items: center;
 }
 .body .cocktail .menuSection .menuItem .aboutBox .product {
-  width: 100%;
-  height: 75px;
+  height: 110px;
   font-size: 15px;
   margin: 0;
   padding: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
 }
 .body .cocktail .menuSection .menuItem .imageBox {
   grid-area: image;
@@ -396,9 +392,9 @@
 .body .bottle .menuSection .menuItem,
 .body .cocktail .menuSection .menuItem {
     width: 500px;
-    height: 400px;
+    height: 430px;
     display: grid;
-    grid-template: "about" 150px "image" 200px "button" 50px;
+    grid-template: "about" 160px "image" 200px "button" 70px;
   }
   .body .barrel .menuSection .menuItem .aboutBox,
 .body .bottle .menuSection .menuItem .aboutBox,
@@ -409,19 +405,19 @@
 .body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
 .body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
     font-size: 18px;
-    height: 40px;
+    height: 50px;
   }
   .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
 .body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
 .body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
     font-size: 14px;
-    height: 20px;
+    height: 30px;
   }
   .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
 .body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
 .body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
     font-size: 14px;
-    height: 90px;
+    height: 80px;
   }
   .body .barrel .menuSection .menuItem .buttonBox a,
 .body .bottle .menuSection .menuItem .buttonBox a,
@@ -434,35 +430,27 @@
 .body .bottle .menuSection .menuItem,
 .body .cocktail .menuSection .menuItem {
     width: 400px;
-    height: 450px;
+    height: 430px;
     display: grid;
-    grid-template: "about" 170px "image" 200px "button" 80px;
+    grid-template: "about" 160px "image" 200px "button" 70px;
   }
   .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
 .body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
 .body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
-    font-size: 20px;
-    height: 60px;
-    border: none;
+    font-size: 18px;
+    height: 50px;
   }
   .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
 .body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
 .body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
     font-size: 14px;
-    height: 20px;
-    border: none;
+    height: 30px;
   }
   .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
 .body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
 .body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
     font-size: 14px;
-    height: 90px;
-    border: none;
-  }
-  .body .barrel .menuSection .menuItem .imageBox,
-.body .bottle .menuSection .menuItem .imageBox,
-.body .cocktail .menuSection .menuItem .imageBox {
-    border: none;
+    height: 80px;
   }
   .body .barrel .menuSection .menuItem .buttonBox a,
 .body .bottle .menuSection .menuItem .buttonBox a,
@@ -474,28 +462,30 @@
   .body .barrel .menuSection .menuItem,
 .body .bottle .menuSection .menuItem,
 .body .cocktail .menuSection .menuItem {
-    width: calc(100% - 4rem);
+    width: 300px;
   }
   .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
 .body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
 .body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
     font-size: 15px;
-    height: 40px;
-    border: none;
+    height: 50px;
   }
   .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
 .body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
 .body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
-    font-size: 12px;
-    height: 20px;
-    border: none;
+    font-size: 11px;
+    height: 30px;
   }
   .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
 .body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
 .body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
     font-size: 11px;
-    height: 90px;
-    border: none;
+    height: 80px;
+  }
+  .body .barrel .menuSection .menuItem .buttonBox a,
+.body .bottle .menuSection .menuItem .buttonBox a,
+.body .cocktail .menuSection .menuItem .buttonBox a {
+    font-size: 10px;
   }
 }
 /*# sourceMappingURL=all-menu.module.css.map */
