--- a/styles/all-menu.module.scss
+++ b/styles/all-menu.module.scss
@@ -1,5 +1,115 @@
+@mixin parts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  .titleSection {
+    border: 5px solid black;
+    background-color: black;
+    color: white;
+    padding: 1rem;
+    width: 100%;
+    h1 {
+      margin: 0;
+    }
+  }
+
+  .menuSection {
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    .menuItem {
+      border: 3px solid black;
+      box-sizing: content-box;
+      border-radius: 5px;
+      width: calc(33% - 4rem);
+      height: 500px;
+      margin: 1rem;
+
+      display: grid;
+      grid-template:
+        "about" 200px
+        "image" 200px
+        "button" 100px;
+
+      .aboutBox {
+        grid-area: about;
+        width: 100%;
+        border-bottom: 1px solid black;
+
+        .title {
+          width: 100%;
+          height: 60px;
+          font-size: 18px;
+          padding: 0.5rem;
+          font-weight: bold;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+
+        .price {
+          width: 100%;
+          height: 30px;
+          font-size: 15px;
+          padding: 0.5rem;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+
+        .product {
+          height: 110px;
+          font-size: 15px;
+          margin: 0;
+          padding: 0.5rem;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+      }
+
+      .imageBox {
+        grid-area: image;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .image {
+          object-fit: contain;
+        }
+      }
+
+      .buttonBox {
+        grid-area: button;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        a {
+          padding: 1rem 2rem;
+          border: 1px solid black;
+          border-radius: 5px;
+          margin: 0.5rem;
+
+          &:hover {
+            color: white;
+            background-color: black;
+          }
+        }
+      }
+    }
+  }
+}
+
 .body {
-  // border: 5px solid red;
   width: 100%;
   min-height: 100vh;
   display: grid;
@@ -12,7 +122,6 @@
 
   .pageTitle {
     grid-area: head;
-    // border: 5px solid blue;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -23,367 +132,21 @@
     }
   }
 
-  // 🍺🍺🍺🍺🍺🍺🍺🍺🍺🍺🍺🍺🍺🍺(1)
-
   .barrel {
     grid-area: barrel;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    .titleSection {
-      border: 5px solid black;
-      background-color: black;
-      color: white;
-      padding: 1rem;
-      width: 100%;
-      h1 {
-        margin: 0;
-      }
-    }
-
-    .menuSection {
-      width: 100%;
-      height: 100%;
-      padding: 1rem;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-
-      .menuItem {
-        border: 5px solid black;
-        box-sizing: content-box;
-        border-radius: 5px;
-        width: calc(33% - 4rem);
-        height: 500px;
-        margin: 1rem;
-
-        display: grid;
-        grid-template:
-          "about" 200px
-          "image" 200px
-          "button" 100px;
-
-        .aboutBox {
-          grid-area: about;
-          width: 100%;
-          border-bottom: 1px solid black;
-          // background-color: pink;
-
-          .title {
-            width: 100%;
-            height: 60px;
-            //⭐️⭐️⭐️
-            font-size: 18px;
-            padding: 0.3rem;
-            font-weight: bold;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-
-          .price {
-            width: 100%;
-            height: 30px;
-            //⭐️⭐️⭐️
-            font-size: 15px;
-            padding: 0.5rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-
-          .product {
-            height: 110px;
-            //⭐️⭐️⭐️
-            font-size: 15px;
-            margin: 0;
-            padding: 0.5rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-        }
-
-        .imageBox {
-          grid-area: image;
-          // border: 2px dashed black;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          .image {
-            object-fit: contain;
-          }
-        }
-
-        .buttonBox {
-          grid-area: button;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          a {
-            padding: 1rem 2rem;
-            border: 1px solid black;
-            border-radius: 5px;
-            margin: 0.5rem;
-
-            &:hover {
-              color: white;
-              background-color: black;
-            }
-          }
-        }
-      }
-    }
+    @include parts;
   }
-
-  // 🍻🍻🍻🍻🍻🍻🍻🍻🍻🍻🍻(2)
 
   .bottle {
     grid-area: bottle;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    .titleSection {
-      border: 5px solid black;
-      background-color: black;
-      color: white;
-      padding: 1rem;
-      width: 100%;
-      h1 {
-        margin: 0;
-      }
-    }
-
-    .menuSection {
-      width: 100%;
-      height: 100%;
-      padding: 1rem;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-
-      .menuItem {
-        border: 5px solid black;
-        box-sizing: content-box;
-        border-radius: 5px;
-        width: calc(33% - 4rem);
-        height: 500px;
-        margin: 1rem;
-
-        display: grid;
-        grid-template:
-          "about" 200px
-          "image" 200px
-          "button" 100px;
-
-        .aboutBox {
-          grid-area: about;
-          width: 100%;
-          border-bottom: 1px solid black;
-
-          .title {
-            width: 100%;
-            height: 70px;
-            //⭐️⭐️⭐️
-            font-size: 18px;
-            padding: 0.3rem;
-            font-weight: bold;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-
-          .price {
-            width: 100%;
-            height: 30px;
-            //⭐️⭐️⭐️
-            font-size: 15px;
-            padding: 0.5rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-
-          .product {
-            width: 100%;
-            height: 75px;
-            //⭐️⭐️⭐️
-            font-size: 15px;
-            margin: 0;
-            padding: 0.5rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100px;
-          }
-        }
-
-        .imageBox {
-          grid-area: image;
-          // border: 2px dashed black;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          .image {
-            object-fit: contain;
-          }
-        }
-
-        .buttonBox {
-          grid-area: button;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          a {
-            padding: 1rem 2rem;
-            border: 1px solid black;
-            border-radius: 5px;
-            margin: 0.5rem;
-
-            &:hover {
-              color: white;
-              background-color: black;
-            }
-          }
-        }
-      }
-    }
+    @include parts;
   }
-
-  // 🍷🍷🍷🍷🍷🍷🍷🍷🍷🍷🍷(3)
 
   .cocktail {
     grid-area: cocktail;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    .titleSection {
-      border: 5px solid black;
-      background-color: black;
-      color: white;
-      padding: 1rem;
-      width: 100%;
-      h1 {
-        margin: 0;
-      }
-    }
-
-    .menuSection {
-      width: 100%;
-      height: 100%;
-      padding: 1rem;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-
-      .menuItem {
-        border: 5px solid black;
-        box-sizing: content-box;
-        border-radius: 5px;
-        width: calc(33% - 4rem);
-        height: 500px;
-        margin: 1rem;
-
-        display: grid;
-        grid-template:
-          "about" 200px
-          "image" 200px
-          "button" 100px;
-
-        .aboutBox {
-          grid-area: about;
-          width: 100%;
-          border-bottom: 1px solid black;
-
-          .title {
-            width: 100%;
-            height: 70px;
-            //⭐️⭐️⭐️
-            font-size: 18px;
-            padding: 0.3rem;
-            font-weight: bold;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-
-          .price {
-            width: 100%;
-            height: 30px;
-            //⭐️⭐️⭐️
-            font-size: 15px;
-            padding: 0.5rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-          }
-
-          .product {
-            width: 100%;
-            height: 75px;
-            //⭐️⭐️⭐️
-            font-size: 15px;
-            margin: 0;
-            padding: 0.5rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100px;
-          }
-        }
-
-        .imageBox {
-          grid-area: image;
-          // border: 2px dashed black;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          .image {
-            object-fit: contain;
-          }
-        }
-
-        .buttonBox {
-          grid-area: button;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          a {
-            padding: 1rem 2rem;
-            border: 1px solid black;
-            border-radius: 5px;
-            margin: 0.5rem;
-
-            &:hover {
-              color: white;
-              background-color: black;
-            }
-          }
-        }
-      }
-    }
+    @include parts;
   }
 }
-
-//🔥レスポンシブデザイン🔥
 
 @media screen and (min-width: 1170px) and (max-width: 1280px) {
   .body {
@@ -393,7 +156,6 @@
       .menuSection {
         .menuItem {
           .aboutBox {
-            // background-color: skyblue;
             .titleBox {
               .title {
                 font-size: 16px;
@@ -416,9 +178,7 @@
   }
 }
 
-// 🟦🟦🟦🟦🟦🟦
 @media screen and (max-width: 1170px) {
-  // @media screen and (max-width: 1024px) {
   .body {
     .barrel,
     .bottle,
@@ -428,23 +188,19 @@
           width: calc(50% - 4rem);
 
           .aboutBox {
-            // background-color: mediumseagreen;
             .titleBox {
               .title {
                 font-size: 18px;
-                // font-size: 20px;
               }
             }
 
             .sentenceBox {
               .price {
                 font-size: 15px;
-                // font-size: 17px;
               }
 
               .product {
                 font-size: 15px;
-                // font-size: 17px;
               }
             }
           }
@@ -454,7 +210,6 @@
   }
 }
 
-//900px
 @media screen and (max-width: 900px) {
   // @media screen and (max-width: 1024px) {
   .body {
@@ -466,23 +221,19 @@
           width: calc(50% - 4rem);
 
           .aboutBox {
-            // background-color: orange;
             .titleBox {
               .title {
                 font-size: 16px;
-                // font-size: 20px;
               }
             }
 
             .sentenceBox {
               .price {
                 font-size: 13px;
-                // font-size: 17px;
               }
 
               .product {
                 font-size: 13px;
-                // font-size: 17px;
               }
             }
           }
@@ -492,9 +243,7 @@
   }
 }
 
-// 830px
 @media screen and (max-width: 830px) {
-  // @media screen and (max-width: 1024px) {
   .body {
     .barrel,
     .bottle,
@@ -504,23 +253,19 @@
           width: calc(50% - 4rem);
 
           .aboutBox {
-            // background-color: orange;
             .titleBox {
               .title {
                 font-size: 15px;
-                // font-size: 20px;
               }
             }
 
             .sentenceBox {
               .price {
                 font-size: 12px;
-                // font-size: 17px;
               }
 
               .product {
                 font-size: 12px;
-                // font-size: 17px;
               }
             }
           }
@@ -530,8 +275,6 @@
   }
 }
 
-// 🟧🟧🟧🟧🟧（ここから1列表示に変わる）
-// @media screen and (max-width: 830px) {
 @media screen and (max-width: 768px) {
   .body {
     .barrel,
@@ -540,50 +283,37 @@
       .menuSection {
         .menuItem {
           width: 500px;
-          height: 400px;
-          // border: 5px solid red;
+          height: 430px;
           display: grid;
           grid-template:
-            "about" 150px
+            "about" 160px
             "image" 200px
-            "button" 50px;
+            "button" 70px;
 
           .aboutBox {
-            // border: 5px solid blue;
             background-color: white;
 
             .titleBox {
               .title {
                 font-size: 18px;
-                height: 40px;
-                // border: 1px dashed black;
-                // font-size: 20px;
+                height: 50px;
               }
             }
 
             .sentenceBox {
               .price {
                 font-size: 14px;
-                height: 20px;
-                // border: 1px dashed black;
-                // font-size: 17px;
+                height: 30px;
               }
 
               .product {
                 font-size: 14px;
-                height: 90px;
-                // border: 1px dashed black;
-                // font-size: 17px;
+                height: 80px;
               }
             }
           }
 
-          .imageBox {
-            // border: 5px solid green;
-          }
-
           .buttonBox {
-            // border: 5px solid orange;
             a {
               padding: 0.5rem 1rem;
             }
@@ -594,49 +324,6 @@
   }
 }
 
-// 680px
-// @media screen and (max-width: 680px) {
-//   .body {
-//     .barrel,
-//     .bottle,
-//     .cocktail {
-//       .menuSection {
-//         .menuItem {
-//           width: 500px;
-//           // width: calc(100% - 4rem);
-//           border: 5px solid red;
-//           // margin: 1rem 3rem;
-
-//           .aboutBox {
-//             border: 5px solid blue;
-//             background-color: white;
-
-//             .titleBox {
-//               .title {
-//                 font-size: 18px;
-//                 // font-size: 20px;
-//               }
-//             }
-
-//             .sentenceBox {
-//               .price {
-//                 font-size: 15px;
-//                 // font-size: 17px;
-//               }
-
-//               .product {
-//                 font-size: 15px;
-//                 // font-size: 17px;
-//               }
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
-
-// 💎💎💎💎💎
 @media screen and (max-width: 600px) {
   .body {
     .barrel,
@@ -645,54 +332,35 @@
       .menuSection {
         .menuItem {
           width: 400px;
-          height: 450px;
-          // border: 5px solid red;
+          height: 430px;
           display: grid;
           grid-template:
-            "about" 170px
+            "about" 160px
             "image" 200px
-            "button" 80px;
+            "button" 70px;
 
           .aboutBox {
-            // border: 5px solid blue;
-            // background-color: white;
-
             .titleBox {
               .title {
-                font-size: 20px;
-                height: 60px;
-                border: none;
-                // border: 1px dashed black;
-                // font-size: 20px;
+                font-size: 18px;
+                height: 50px;
               }
             }
 
             .sentenceBox {
               .price {
                 font-size: 14px;
-                height: 20px;
-                border: none;
-                // border: 1px dashed black;
-                // font-size: 17px;
+                height: 30px;
               }
 
               .product {
                 font-size: 14px;
-                height: 90px;
-                border: none;
-                // border: 1px dashed black;
-                // font-size: 17px;
+                height: 80px;
               }
             }
           }
 
-          .imageBox {
-            // border: 5px solid green;
-            border: none;
-          }
-
           .buttonBox {
-            // border: 5px solid orange;
             a {
               padding: 0.5rem 1rem;
             }
@@ -703,7 +371,6 @@
   }
 }
 
-// 💗💗💗💗💗
 @media screen and (max-width: 480px) {
   .body {
     .barrel,
@@ -711,31 +378,31 @@
     .cocktail {
       .menuSection {
         .menuItem {
-          width: calc(100% - 4rem);
+          width: 300px;
+
           .aboutBox {
             .titleBox {
               .title {
                 font-size: 15px;
-                height: 40px;
-                border: none;
-                // border: 1px dashed black;
+                height: 50px;
               }
             }
 
             .sentenceBox {
               .price {
-                font-size: 12px;
-                height: 20px;
-                border: none;
-                // border: 1px dashed black;
+                font-size: 11px;
+                height: 30px;
               }
 
               .product {
                 font-size: 11px;
-                height: 90px;
-                border: none;
-                // border: 1px dashed black;
+                height: 80px;
               }
+            }
+          }
+          .buttonBox {
+            a {
+              font-size: 10px;
             }
           }
         }
