--- a/styles/[id].module.css
+++ b/styles/[id].module.css
@@ -4,16 +4,29 @@
   width: 100%;
   min-height: calc(100vh - 130px);
 }
-.body .pageTitle {
-  width: 100%;
-  height: 80px;
-  background-color: rgb(187, 187, 187);
+.body .pageTitle,
+.body .pageTitleCocktail {
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2rem;
+  z-index: 1;
 }
-.body .pageTitle h1 {
+.body .pageTitle h1,
+.body .pageTitleCocktail h1 {
   margin: 0;
+}
+.body .pageTitleCocktail {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
+  z-index: 1;
+}
+.body .pageTitleCocktail h1 {
+  margin-left: 1rem;
 }
 .body main {
   position: relative;
@@ -22,7 +35,7 @@
   background-repeat: no-repeat;
   background-image: url("/image/all-menu/barrel.jpg");
   width: 100%;
-  min-height: calc(100vh - 260px);
+  min-height: calc(100vh - 130px);
   padding: 3rem;
   display: flex;
   justify-content: center;
@@ -146,7 +159,7 @@
 
 @media screen and (max-width: 1100px) {
   .body .pageTitle h1 {
-    font-size: 1.8rem;
+    font-size: 2rem;
   }
   .body main .box {
     width: 75%;
@@ -181,7 +194,10 @@
 }
 @media screen and (max-width: 768px) {
   .body .pageTitle h1 {
-    font-size: 1.7rem;
+    font-size: 2rem;
+  }
+  .body .pageTitleCocktail h1 {
+    font-size: 1.6rem;
   }
   .body main .box {
     width: 100%;
@@ -224,6 +240,15 @@
   }
 }
 @media screen and (max-width: 550px) {
+  .body .pageTitleCocktail {
+    flex-direction: column;
+  }
+  .body .pageTitleCocktail h1:nth-child(1) {
+    margin-bottom: 0.3rem;
+  }
+  .body .pageTitleCocktail h1 {
+    font-size: 1.7rem;
+  }
   .body main {
     padding: 3rem 2.5rem;
   }
@@ -262,7 +287,10 @@
     top: 100px;
   }
   .body .pageTitle h1 {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
+  }
+  .body .pageTitleCocktail h1 {
+    font-size: 1.5rem;
   }
   .body main {
     padding: 3rem 2rem;
@@ -315,7 +343,10 @@
     top: 100px;
   }
   .body .pageTitle h1 {
-    font-size: 1.2rem;
+    font-size: 1.7rem;
+  }
+  .body .pageTitleCocktail h1 {
+    font-size: 1.3em;
   }
   .body main {
     padding: 3rem 2rem;
@@ -352,6 +383,14 @@
   .body main .box .image {
     width: 100%;
     height: 200px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .body .pageTitle h1 {
+    font-size: 1.4rem;
+  }
+  .body .pageTitleCocktail h1 {
+    font-size: 1.1em;
   }
 }
 /*# sourceMappingURL=[id].module.css.map */
