--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -20,16 +20,26 @@
   width: 100%;
   min-height: calc(100vh - 130px);
 
-  .pageTitle {
-    width: 100%;
-    height: 80px;
-    background-color: rgb(187 187 187);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .pageTitle,
+  .pageTitleCocktail {
+    color: white;
+    @include center;
+    margin-bottom: 2rem;
+    z-index: 1;
 
     h1 {
       margin: 0;
+    }
+  }
+
+  .pageTitleCocktail {
+    color: white;
+    @include center;
+    margin-bottom: 2rem;
+    z-index: 1;
+
+    h1 {
+      margin-left: 1rem;
     }
   }
 
@@ -50,9 +60,10 @@
       bottom: 0;
       height: 100%;
     }
-
+    // border: 3px solid red;
     width: 100%;
-    min-height: calc(100vh - 260px);
+    // min-height: calc(100vh - 260px);
+    min-height: calc(100vh - 130px);
     padding: 3rem;
     @include center;
     flex-direction: column;
@@ -180,7 +191,7 @@
   .body {
     .pageTitle {
       h1 {
-        font-size: 1.8rem;
+        font-size: 2rem;
       }
     }
     main {
@@ -240,9 +251,15 @@
   .body {
     .pageTitle {
       h1 {
-        font-size: 1.7rem;
+        font-size: 2rem;
       }
     }
+    .pageTitleCocktail {
+      h1 {
+        font-size: 1.6rem;
+      }
+    }
+
     main {
       .box {
         width: 100%;
@@ -299,6 +316,17 @@
 
 @media screen and (max-width: 550px) {
   .body {
+    .pageTitleCocktail {
+      flex-direction: column;
+      h1:nth-child(1) {
+        margin-bottom: 0.3rem;
+      }
+
+      h1 {
+        font-size: 1.7rem;
+      }
+    }
+
     main {
       padding: 3rem 2.5rem;
 
@@ -349,7 +377,13 @@
     top: 100px;
     .pageTitle {
       h1 {
-        font-size: 1.6rem;
+        font-size: 1.8rem;
+      }
+    }
+
+    .pageTitleCocktail {
+      h1 {
+        font-size: 1.5rem;
       }
     }
     main {
@@ -415,7 +449,13 @@
     top: 100px;
     .pageTitle {
       h1 {
-        font-size: 1.2rem;
+        font-size: 1.7rem;
+      }
+    }
+
+    .pageTitleCocktail {
+      h1 {
+        font-size: 1.3em;
       }
     }
     main {
@@ -462,6 +502,22 @@
           width: 100%;
           height: 200px;
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .body {
+    .pageTitle {
+      h1 {
+        font-size: 1.4rem;
+      }
+    }
+
+    .pageTitleCocktail {
+      h1 {
+        font-size: 1.1em;
       }
     }
   }
